<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Catroid: An on-device visual programming system for Android devices
  ~ Copyright (C) 2010-2016 The Catrobat Team
  ~ (<http://developer.catrobat.org/credits>)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ An additional term exception under section 7 of the GNU Affero
  ~ General Public License, version 3, is available at
  ~ http://developer.catrobat.org/license_additional_term
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:stretchColumns="*" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_weight="1"  >

        <Button
            android:id="@+id/formula_editor_keyboard_compute"
            style="@style/FormulaEditorButton"
            android:layout_marginTop="@dimen/key_margin"
            android:layout_marginLeft="@dimen/key_margin"
            android:text="@string/formula_editor_compute"
            android:layout_span="2" />

        <Button
            android:id="@+id/formula_editor_keyboard_bracket_open"
            style="@style/FormulaEditorButton"
            android:layout_marginTop="@dimen/key_margin"
            android:layout_span="1"
            android:text="@string/formula_editor_bracket_open" />

        <Button
            android:id="@+id/formula_editor_keyboard_bracket_close"
            style="@style/FormulaEditorButton"
            android:layout_marginTop="@dimen/key_margin"
            android:layout_span="1"
            android:text="@string/formula_editor_bracket_close" />

        <ImageButton
            android:id="@+id/formula_editor_keyboard_delete"
            style="@style/FormulaEditorImageButton"
            android:layout_marginTop="@dimen/key_margin"
            android:layout_height="match_parent"
            android:contentDescription="@string/formula_editor_image_button_description_delete"
            android:src="@android:drawable/ic_input_delete"
            android:layout_span="2" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_weight="1"  >

        <Button
            android:id="@+id/formula_editor_keyboard_object"
            style="@style/FormulaEditorButton"
            android:layout_marginLeft="@dimen/key_margin"
            android:text="@string/formula_editor_object"
            android:layout_span="2" />

        <Button
            android:id="@+id/formula_editor_keyboard_7"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/number_7" />

        <Button
            android:id="@+id/formula_editor_keyboard_8"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/number_8" />

        <Button
            android:id="@+id/formula_editor_keyboard_9"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/number_9" />

        <Button
            android:id="@+id/formula_editor_keyboard_divide"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/formula_editor_operator_divide" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_weight="1"  >

        <Button
            android:id="@+id/formula_editor_keyboard_function"
            style="@style/FormulaEditorButton"
            android:layout_marginLeft="@dimen/key_margin"
            android:text="@string/formula_editor_functions"
            android:layout_span="2" />

        <Button
            android:id="@+id/formula_editor_keyboard_4"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/number_4" />

        <Button
            android:id="@+id/formula_editor_keyboard_5"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/number_5" />

        <Button
            android:id="@+id/formula_editor_keyboard_6"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/number_6" />

        <Button
            android:id="@+id/formula_editor_keyboard_mult"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/formula_editor_operator_mult" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_weight="1"  >

        <Button
            android:id="@+id/formula_editor_keyboard_logic"
            style="@style/FormulaEditorButton"
            android:layout_marginLeft="@dimen/key_margin"
            android:text="@string/formula_editor_logic"
            android:layout_span="2" />

        <Button
            android:id="@+id/formula_editor_keyboard_1"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/number_1" />

        <Button
            android:id="@+id/formula_editor_keyboard_2"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/number_2" />

        <Button
            android:id="@+id/formula_editor_keyboard_3"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/number_3" />

        <Button
            android:id="@+id/formula_editor_keyboard_minus"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/formula_editor_operator_minus" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_weight="1" >

        <Button
            android:id="@+id/formula_editor_keyboard_sensors"
            style="@style/FormulaEditorButton"
            android:layout_marginLeft="@dimen/key_margin"
            android:text="@string/formula_editor_device"
            android:layout_span="2" />

        <Button
            android:id="@+id/formula_editor_keyboard_decimal_mark"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/formula_editor_decimal_mark" />

        <Button
            android:id="@+id/formula_editor_keyboard_0"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/number_0" />

        <Button
            android:id="@+id/formula_editor_keyboard_equal"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/formula_editor_logic_equal" />

        <Button
            android:id="@+id/formula_editor_keyboard_plus"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/formula_editor_operator_plus" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_weight="1" >

        <Button
            android:id="@+id/formula_editor_keyboard_data"
            style="@style/FormulaEditorButton"
            android:layout_marginLeft="@dimen/key_margin"
            android:text="@string/formula_editor_data"
            android:layout_span="2" />

        <Button
            android:id="@+id/formula_editor_keyboard_string"
            style="@style/FormulaEditorButton"
            android:text="@string/formula_editor_string"
            android:layout_span="2" />

        <Button
            android:id="@+id/formula_editor_keyboard_ok"
            style="@style/FormulaEditorButton"
            android:text="@string/ok"
            android:layout_span="2" />
    </TableRow>
</TableLayout>
