...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/dialog_formula_editor_data_name_edit_text"
            style="@style/DefaultDialog.EditText"
            android:hint="@string/formula_editor_data_dialog_hint" />

        <RadioGroup
            android:id="@+id/dialog_formula_editor_data_name_radio_group"
            style="@style/DefaultDialog.Item"
...
